syntax = "proto3";

package service;

option go_package = "internal/module/grab/grpc-transport/protoc";


service Order {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message GetOrderRequest {
  int32 order_id = 1;
}

message GetOrderResponse {
  int32 id = 1;
}
